@@ -51,6 +51,8 @@ HAGOOGAMAGOOGLE: 0
 ¿Does π have fingers?
 ?Does ? have fingers?
 *Does * have fingers?
+<bf>Does * have fingers?
+<c0>Does * have fingers?
 ---- whoami
 quack1
 quack2
