@@ -1,5 +1,8 @@
 2019-01-05  Jay Berkenbilt  <ejb@ql.org>
 
+	* Add methods QUtil::utf8_to_win_ansi and
+	QUtil::utf8_to_mac_roman.
+
 	* Add method QUtil::utf8_to_utf16.
 
 2019-01-04  Jay Berkenbilt  <ejb@ql.org>
